@@ -1,3 +1,14 @@
+2008-04-28  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Geoff Garen.
+
+        <rdar://problem/5825192> Replace use of Gestalt with BSD sysctl
+
+        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
+        (WebCore::MediaPlayerPrivate::isAvailable): There is no need to check QuickTime version post-Tiger,
+        as it will never be below 7.3 again. This change may make library loading happen earlier in
+        some cases, hopefully, that's not a big deal.
+
 2008-04-25  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
